# ChangeLog for dev-ruby/globalid
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/globalid/ChangeLog,v 1.7 2015/02/23 06:40:34 graaff Exp $

*globalid-0.3.3 (23 Feb 2015)

  23 Feb 2015; Hans de Graaff <graaff@gentoo.org> +globalid-0.3.3.ebuild:
  Version bump.

  23 Feb 2015; Hans de Graaff <graaff@gentoo.org> -globalid-0.2.3.ebuild,
  -globalid-0.3.0.ebuild:
  Cleanup.

*globalid-0.3.2 (06 Feb 2015)

  06 Feb 2015; Hans de Graaff <graaff@gentoo.org> +globalid-0.3.2.ebuild:
  Version bump.

  08 Jan 2015; Markus Meier <maekke@gentoo.org> globalid-0.3.0.ebuild:
  add ~arm, bug #534186

  02 Jan 2015; Hans de Graaff <graaff@gentoo.org> globalid-0.3.0.ebuild:
  Keyword ppc and ppc64 for bug 534186.

*globalid-0.3.0 (13 Sep 2014)

  13 Sep 2014; Manuel Rüger <mrueg@gentoo.org> +globalid-0.3.0.ebuild:
  Version bump.

*globalid-0.2.3 (27 Aug 2014)

  27 Aug 2014; Hans de Graaff <graaff@gentoo.org> +globalid-0.2.3.ebuild,
  +metadata.xml:
  Initial import. New dependency for forthcoming Rails 4.2.