@@ -18,16 +18,14 @@ DIST gimp-2.8.10.tar.bz2 20343461 SHA256 e7fd8b19f989138d826003c75f56bd5b6f136ee
 DIST gimp-2.8.14.tar.bz2 20440077 SHA256 d82a958641c9c752d68e35f65840925c08e314cea90222ad845892a40e05b22d SHA512 533f6b931624d36525cb2f3fbc27fe27565d761bbe26873bb5445c06c01523c044d1814363a8cd76b6e381440db4c6e302b0d3f7a9e5aac7f60072770552f1ba WHIRLPOOL 8fd7b0fd5f8627b2df83481f7956727acd42eafcdc9c9116713d60faf8578005c2fb1e1d729f3b2c836a90e9bab063e477f9da5285e5c43a79f2dbe441a0565b
 EBUILD gimp-2.8.10-r1.ebuild 4875 SHA256 772a293efb1a5a0b618a2bc8c92b4b8f1dc3a47b9a05f891bedc3c6a2b50dbda SHA512 54506396da11d585a833b062e8a8b7001c997a5cc61a6de0970c62404fa041a3988a1a861d8a1a11a1df91d6ba10b86c3426e430095695928f3ac7735280c253 WHIRLPOOL 3846493d55872dabf1ff8cbf780de4c1fba826e89d5c94006fccbb1bfa0c43d8531bc628df1600d5c5bdb8954862e56fd8f65ba2319e7ebe031e12309525a518
 EBUILD gimp-2.8.10-r2.ebuild 5005 SHA256 040db7c36968ed973c0d6876901844f309b23493b8a3c9c74334bc78cbcf7886 SHA512 1105dd6a78ec1c7eb0db70719e44fece6c2663588ccc10e79507e2c133c5395ddc681119cbfc90ff52e7d1e6c8e3e50e1c21e11671616f98cf4ed7f0fc22fca7 WHIRLPOOL 138f2d5ea6aaf13d18fec04b2f937b6ed0e3cb95384541770e98cbbd0651f98d4586ad2f846586a8f1130d261f0237ef7506e67071c06a18c0082924590a6a0b
-EBUILD gimp-2.8.14.ebuild 4825 SHA256 386706bded182b50a39385550080d296447ac11898e28ac4ec8b4875c59f070a SHA512 f74f632728b59ff1aa60bf968d95e9e6cfd9a8e39c57f9793b3bc252d68e968bea83ff4ea732edd535dd8cd3178540047b72a805fdbaff2fea660b8e1faad7fb WHIRLPOOL cf4b560fedca9079b63c905262a7211fa2a0db107126fd26e46410c457d868574aa465728476d473d3da7c7149e20b40601bf4afdb5714ecde281d027eaf7792
+EBUILD gimp-2.8.14.ebuild 4820 SHA256 51c4a0e6e9cd4827b5728772ca777fd29fa3c5c50b91941d3bb5760307df1f13 SHA512 a9f0d89763c7d71da9aebe873fb67c00a05bc830f39d72ac00478d959e60735f2fa4570f4810629fba9630be11b5544887222e27e135e003047979d46fd96c04 WHIRLPOOL d5bbe120d9795027c8afe2d9e2532cadac2a194b675d86a6a86bb85a33c29debe2ceebf56ed33e4e43e4767a8af8dcc62fc61ebf816b373d832f993c3481943e
 EBUILD gimp-9999.ebuild 4482 SHA256 722285b96e4dbea0981a3cc416ebac480b6d71a04a64e2bd6ea1f26661e77f50 SHA512 c8fc41e0f1b9ffeaf0eee9f43c4cfee3ca94a4fe3ff0beabf620653a040e1bc3c39a4adf44175656124e0afeddb0a98b96dcdb1d74dbecd7bd7dce2d074e94f8 WHIRLPOOL 3bd4acbf205d05f10af3a2b368c59a77497a0eda0bc7743ec7c9e1437e60c8655548925283e1cf72370393a233d7845e20c32e523fe490632313ff434e44e8d6
-MISC ChangeLog 63911 SHA256 ee776b39d29ce3b6245ecde113579b6455875cb792477f08e9a4dfc8a362b255 SHA512 3e053acd737b98c71365943b9e6b9f70e11684cef42b418278bdfb508c2a69dd05091d4c298ab11d789efa8b238e10c85592cea608919fd66c077ca065803fd9 WHIRLPOOL 7c7ca58e333a214059706d38bb11fcf9e25442ef95722917a6d147d1e3faa7802f414ce5f0d165f83f94b7b850b5db754096fba5ceb8d8504cc786c8e3898742
+MISC ChangeLog 64009 SHA256 0c5e0b6fdb656ffac1cd871e975659b0dfa7b080f2ad041a905a9f86d3bb9330 SHA512 1d0e0bf88a096611e464e804a0f7d946e9ddf9acc9964b4daa1e87bdf115cbea1aec0e8f745ef88273f39562ae4370743652de3413a39d097646f47fb48c8597 WHIRLPOOL cc40100157c01b7c2cc28f97e9a8309ab613824ce0e4a56bc008ff924f39939775197332794aa6554d6c70cce9597e143285069f67e70f4e851316bf1b986115
 MISC metadata.xml 285 SHA256 77c9767711868abab1e559504dd88eb8aef8cf395629d8ec8c7a5fdb3d29397e SHA512 0b1abe9749d79ed8644c2a34312ab70cff232e08f64c1a914185cbafe8c754e9c6442eac1e3a1c449057e52b076333b70ea8be7418570bfcbee69f69d455079e WHIRLPOOL 9f2199f149dd49efce83f4710f026fc235a9aed38b7c7e0ffbb5480ef6865dee6ac555178bb92a819071d016fb0ead581765697cc3035b829ed96126bc7e6053
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iJwEAQEIAAYFAlU9GGgACgkQG9wOWsQutdZjjgP/c+KAszrr2YXg9FuCx5XyAucO
-r+TvdwYk7gVFOKFuZTVIz/b25OJT3lP+bwmW3xs0YAQIg/9mWKIUtjC0g0fFIFUp
-jOKnY/rNAOOalQqZCEzUesbmO2Ls5Cg8wkzcWxVlZldqPgPxTcDVBRX4Xn2OcQW4
-ZH7YHU5z4pB9Aaht2EA=
-=ho6p
+iEYEAREIAAYFAlVBt+QACgkQVWmRsqeSphP0HACfU8OQv/Hvu7kHNjvCpFHBOf7R
+Su0AmQFf7R9i2yki0VMrWmhOMg0Mlxip
+=iC06
 -----END PGP SIGNATURE-----
