@@ -1,14 +1,0 @@
-DEFINED_PHASES=compile configure install prepare setup test unpack
-DEPEND=ruby_targets_ruby19? ( test? ( dev-ruby/bundler[ruby_targets_ruby19] >=dev-ruby/activemodel-4.1.0[ruby_targets_ruby19] >=dev-ruby/railties-4.1.0[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/bundler[ruby_targets_ruby20] >=dev-ruby/activemodel-4.1.0[ruby_targets_ruby20] >=dev-ruby/railties-4.1.0[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( dev-ruby/bundler[ruby_targets_ruby21] >=dev-ruby/activemodel-4.1.0[ruby_targets_ruby21] >=dev-ruby/railties-4.1.0[ruby_targets_ruby21] ) ) test? ( ruby_targets_ruby19? ( >=dev-ruby/activesupport-4.1.0[ruby_targets_ruby19] ) ruby_targets_ruby20? ( >=dev-ruby/activesupport-4.1.0[ruby_targets_ruby20] ) ruby_targets_ruby21? ( >=dev-ruby/activesupport-4.1.0[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( doc? ( dev-ruby/rdoc[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( doc? ( dev-ruby/rdoc[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( doc? ( dev-ruby/rdoc[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( test? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/rake[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( dev-ruby/rake[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) )
-DESCRIPTION=Reference models by URI
-EAPI=5
-HOMEPAGE=https://github.com/rails/globalid
-IUSE=test elibc_FreeBSD ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 doc test test
-KEYWORDS=~amd64 ~arm ~ppc ~ppc64
-LICENSE=MIT
-RDEPEND=ruby_targets_ruby19? ( >=dev-ruby/activesupport-4.1.0[ruby_targets_ruby19] ) ruby_targets_ruby20? ( >=dev-ruby/activesupport-4.1.0[ruby_targets_ruby20] ) ruby_targets_ruby21? ( >=dev-ruby/activesupport-4.1.0[ruby_targets_ruby21] ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] )
-REQUIRED_USE=|| ( ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 )
-SLOT=0
-SRC_URI=https://github.com/rails/globalid/archive/v0.3.2.tar.gz -> globalid-0.3.2.tar.gz
-_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	java-utils-2	8f4127eaee79040ecb5e8d8a528d7084	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	ruby-fakegem	d4f8591e9b20b106327e9d143eb13da5	ruby-ng	c79a9fd7644eefe8009be02a82648e1f	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=0e4556de43d0ae2b7b051241e62c0719
