@@ -4,11 +4,11 @@ DESCRIPTION=GNU Image Manipulation Program
 EAPI=5
 HOMEPAGE=http://www.gimp.org/
 IUSE=alsa aalib altivec aqua bzip2 curl dbus debug doc exif gnome postscript jpeg jpeg2k lcms cpu_flags_x86_mmx mng pdf png python smp cpu_flags_x86_sse svg tiff udev webkit wmf xpm linguas_am linguas_ar linguas_ast linguas_az linguas_be linguas_bg linguas_br linguas_ca linguas_ca@valencia linguas_cs linguas_csb linguas_da linguas_de linguas_dz linguas_el linguas_en_CA linguas_en_GB linguas_eo linguas_es linguas_et linguas_eu linguas_fa linguas_fi linguas_fr linguas_ga linguas_gl linguas_gu linguas_he linguas_hi linguas_hr linguas_hu linguas_id linguas_is linguas_it linguas_ja linguas_ka linguas_kk linguas_km linguas_kn linguas_ko linguas_lt linguas_lv linguas_mk linguas_ml linguas_ms linguas_my linguas_nb linguas_nds linguas_ne linguas_nl linguas_nn linguas_oc linguas_pa linguas_pl linguas_pt linguas_pt_BR linguas_ro linguas_ru linguas_rw linguas_si linguas_sk linguas_sl linguas_sr linguas_sr@latin linguas_sv linguas_ta linguas_te linguas_th linguas_tr linguas_tt linguas_uk linguas_vi linguas_xh linguas_yi linguas_zh_CN linguas_zh_HK linguas_zh_TW debug python_targets_python2_7
-KEYWORDS=~alpha amd64 ~arm hppa ~ia64 ~mips ppc ~ppc64 ~sparc x86 ~x86-interix ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~x64-solaris ~x86-solaris
+KEYWORDS=~alpha amd64 ~arm hppa ~ia64 ~mips ppc ppc64 ~sparc x86 ~x86-interix ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~x64-solaris ~x86-solaris
 LICENSE=GPL-3 LGPL-3
 RDEPEND=>=dev-libs/glib-2.30.2:2 >=dev-libs/atk-2.2.0 >=x11-libs/gtk+-2.24.10:2 >=x11-libs/gdk-pixbuf-2.24.1:2 >=x11-libs/cairo-1.10.2 >=x11-libs/pango-1.29.4 xpm? ( x11-libs/libXpm ) >=media-libs/freetype-2.1.7 >=media-libs/fontconfig-2.2.0 sys-libs/zlib dev-libs/libxml2 dev-libs/libxslt x11-themes/hicolor-icon-theme >=media-libs/babl-0.1.10 >=media-libs/gegl-0.2.0 aalib? ( media-libs/aalib ) alsa? ( media-libs/alsa-lib ) aqua? ( x11-libs/gtk-mac-integration ) curl? ( net-misc/curl ) dbus? ( dev-libs/dbus-glib ) gnome? ( gnome-base/gvfs ) webkit? ( >=net-libs/webkit-gtk-1.6.1:2 ) jpeg? ( virtual/jpeg:0 ) jpeg2k? ( media-libs/jasper ) exif? ( >=media-libs/libexif-0.6.15 ) lcms? ( >=media-libs/lcms-2.2:2 ) mng? ( media-libs/libmng ) pdf? ( >=app-text/poppler-0.12.4[cairo] ) png? ( >=media-libs/libpng-1.2.37:0 ) python? ( >=dev-lang/python-2.7.5-r2:2.7 >=dev-lang/python-exec-2:=[python_targets_python2_7(-)?,-python_single_target_jython2_5(-),-python_single_target_jython2_7(-),-python_single_target_pypy(-),-python_single_target_pypy3(-),-python_single_target_python3_3(-),-python_single_target_python3_4(-),python_single_target_python2_7(+)] >=dev-python/pygtk-2.10.4:2[python_targets_python2_7(-)?,-python_single_target_jython2_5(-),-python_single_target_jython2_7(-),-python_single_target_pypy(-),-python_single_target_pypy3(-),-python_single_target_python3_3(-),-python_single_target_python3_4(-),python_single_target_python2_7(+)] ) tiff? ( >=media-libs/tiff-3.5.7:0 ) svg? ( >=gnome-base/librsvg-2.36.0:2 ) wmf? ( >=media-libs/libwmf-0.2.8 ) x11-libs/libXcursor sys-libs/zlib bzip2? ( app-arch/bzip2 ) postscript? ( app-text/ghostscript-gpl ) udev? ( virtual/libgudev:= )
 REQUIRED_USE=python? ( python_targets_python2_7 )
 SLOT=2
 SRC_URI=mirror://gimp/v2.8/gimp-2.8.14.tar.bz2
 _eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	eutils	9fb270e417e0e83d64ca52586c4a79de	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome.org	8fef8f967214f56e08fa92d61163d891	gnome2	10c513def52488230abb60a4b19a03b9	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python-single-r1	7a178335dbd6ea7f50ed4e3e1c13c1e4	python-utils-r1	096f8247eae93026af13ab88cf4305cd	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=a432ec79a396cab2d78dd253d1273b52
+_md5_=18236b2fb78685d1aeef668193c87220
