@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/gimp
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/gimp/ChangeLog,v 1.446 2015/04/26 16:56:59 zlogene Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/gimp/ChangeLog,v 1.447 2015/04/30 05:04:35 jer Exp $
+
+  30 Apr 2015; Jeroen Roovers <jer@gentoo.org> gimp-2.8.14.ebuild:
+  Stable for PPC64 (bug #536074).
 
   26 Apr 2015; Mikle Kolyada <zlogene@gentoo.org> gimp-2.8.14.ebuild:
   amd64 stable wrt bug #536074
