@@ -1,6 +1,14 @@
 # ChangeLog for dev-ruby/globalid
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/globalid/ChangeLog,v 1.7 2015/02/23 06:40:34 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/globalid/ChangeLog,v 1.9 2015/04/30 05:17:40 graaff Exp $
+
+  30 Apr 2015; Hans de Graaff <graaff@gentoo.org> -globalid-0.3.2.ebuild:
+  Cleanup.
+
+*globalid-0.3.5 (30 Apr 2015)
+
+  30 Apr 2015; Hans de Graaff <graaff@gentoo.org> +globalid-0.3.5.ebuild:
+  Version bump.
 
 *globalid-0.3.3 (23 Feb 2015)
 
